# backend/src/openapi.rs
@@ -65,6 +65,7 @@ use utoipa::OpenApi;
         crate::api::flows::reset_loudness,
         crate::api::flows::recorder_split_now,
         crate::api::flows::get_compositor_thumbnail,
+        crate::api::flows::get_block_thumbnail,
         crate::api::elements::list_elements,
         crate::api::elements::get_element_info,
         crate::api::elements::get_element_pad_properties,
